# ros_4_wheel_demo

./: DevelopmentNotes.md  README.md
control_plugin/: CMakeLists.txt  backup_CMakeLists.txt  backup_control_plugin.cc  control_plugin.cc  control_plugin.cpp  control_plugin.h  package.xml  updated_CMakeLists.txt
src/atom/launch/: world.launch
src/atom/model/atom/: model.sdf
src/atom/script/: control_bot.py  test_print_state.py
src/atom/urdf/: atom.gazebo  atom.xacro
src/gui/: main.py
