<?xml version="1.0"?>
<package>
  <name>control_plugin</name>
  <version>0.0.0</version>
  <description>The control_plugin is driving the robot and comunicates location with python GUI</description>

  <maintainer email="traista.rafael@yahoo.com">Traista RAfael</maintainer>


  <license>BSD</license>


  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>


</package>